--- a/public/css/app.css
+++ b/public/css/app.css
@@ -102,6 +102,10 @@ ul {
 .hero {
   width: 100%;
   margin: 0 auto;
+  background-image: url(/images/index.jpg?3dad9c989f9475a568447842e7abecdd);
+  height: 200px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .autocomplete {
