--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,6 +24,8 @@
 @import "./partials/singleapartment";
 // footer
 @import "./partials/footer";
+//sponsorship
+@import "./partials/sponsorship";
 //reset user agent
 * {
     margin: 0;
