--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -50,6 +50,10 @@
     font-size: 13px;
     text-decoration: none;
     font-weight: 600 !important;
+    a{
+        color: white;
+        text-decoration: none;
+    }
 }
 
 .button_crud {
