Paggina fatta + responsive

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,6 +24,8 @@
 @import "./partials/footer";
 //Advanced search
 @import "./partials/advancedsearch";
+//Message
+@import "./partials/message";
 //reset user agent
 * {
     margin: 0;
