fix hero reload watch

--- a/resources/sass/partials/_landingpage.scss
+++ b/resources/sass/partials/_landingpage.scss
@@ -10,7 +10,7 @@
     width: 100%;
     margin: 0 auto;
     margin-top: 20px;
-    background-image: url('images/index_2.jpg');
+    // background-image: url('images/index_2.jpg');
     height: 600px;
     background-repeat: no-repeat;
     background-position: center;
