corona sponsorship + fix vari

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -465,6 +465,12 @@ ul {
   padding-bottom: 30px;
 }
 
+.fa-crown {
+  color: white;
+  background-color: gold;
+  padding: 6px;
+}
+
 .flex {
   display: flex;
 }
