--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -70,3 +70,9 @@
     padding-top: 30px;
     padding-bottom: 30px;
 }
+
+.fa-crown {
+    color: white;
+    background-color: gold;
+    padding: 6px;
+}
